--- a/Hactoberfest Logo Animation/animation Logo.html
+++ b/Hactoberfest Logo Animation/animation Logo.html
@@ -21,7 +21,7 @@
   <body>
 
     <div class="register__StyledAvatar-sc-qx4h5k-0 exFNlm">
-      <img src="93467074.jfif" alt="" width="256" height="256" />
+      <img src="https://avatars.githubusercontent.com/u/93467074?v=4" alt="" width="256" height="256" />
     </div>
   </body>
 </html>
